adding action plan steps

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -10,6 +10,47 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d70fff41-52d0-4d45-8912-4ec1b056f1f4",
+   "metadata": {},
+   "source": [
+    "María, a resident of a quaint town near La Plata, in the Buenos Aires province of Argentina, recently inherited a family house from her parents. However, the house, steeped in memories, stands worn and neglected, presenting a dilemma for María. Selling the property in its current state promises little return. Yet, she wonders if there's a possibility to unlock its true potential and fetch a better price. This inquiry prompts a meticulous investigation into the viability of renovating the property. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8155da46-13c5-4c4f-aa4b-38745271eefd",
+   "metadata": {},
+   "source": [
+    "The endeavor involves assessing various factors: from the expenses associated with legal procedures and paperwork to the required repairs and potential enhancements that could elevate the property's value. The central question becomes whether investing in renovations could translate into a substantial increase in the property's worth and result in a profitable sale. To navigate this complex decision-making process, we embark on a journey to analyze market values, considering the limitations of the local real estate market. With the overarching aim of maximizing María's gain, our mission is to guide her towards realizing the optimal strategy for selling her inherited property and securing the best possible return on her investment."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f607f683-1bc2-4e9c-8542-22762c1247a8",
+   "metadata": {},
+   "source": [
+    "The steps in the research process to help María maximize her gain are:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f54a45c-dbbd-43f5-9671-2f8ddf450698",
+   "metadata": {},
+   "source": [
+    "<ul><li> <b>Assess expenses:</b> Evaluate legal fees, paperwork costs, and any other expenses associated with the property transaction.</li>\n",
+    "<li> <b>Identify necessary repairs:</b> Conduct a thorough inspection to determine the repairs needed to improve the property's condition.</li>\n",
+    "<li> <b>Calculate potential increase in property value:</b> Estimate the expected increase in property value resulting from the renovations and improvements.</li>\n",
+    "<li> <b>Research market value:</b> Analyze the local real estate market to determine the maximum potential selling price for the property.</li>\n",
+    "<li> <b>Compare costs and potential gains:</b> Calculate the total investment required for renovations and compare it to the expected increase in property value to assess potential profitability.</li>\n",
+    "<li> <b>Develop a renovation plan:</b> Create a detailed plan outlining the necessary repairs and improvements to maximize the property's value.</li>\n",
+    "<li> <b>Implement renovations:</b> Execute the renovation plan, ensuring quality workmanship and adherence to budget constraints.</li>\n",
+    "<li> <b>Monitor market trends:</b> Stay informed about changes in the local real estate market to determine the optimal timing for selling the property.</li>\n",
+    "<li> <b>List the property:</b> Work with a real estate agent to list the property for sale at an appropriate price to attract potential buyers.</li>\n",
+    "<li> <b>Negotiate and finalize sale:</b> Negotiate with potential buyers to secure the best possible sale price and finalize the property transaction.</li></ul>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "893a70e7-05ad-47ee-89e0-75303010a930",
    "metadata": {},
    "source": [
